...
                                <rect key="frame" x="50" y="353.5" width="314" height="189.5"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jzI-mx-rHi" userLabel="email" customClass="PaddingTextUI" customModule="Cafe_Manager" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="314" height="38"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Phonenumber" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Yd-3v-tG8" userLabel="phonenumber" customClass="PaddingTextUI" customModule="Cafe_Manager" customModuleP
                                        <rect key="frame" x="0.0" y="48" width="314" height="41.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HhH-c3-0Ym" userLabel="password" customClass="PaddingTextUI" customModule="Cafe_Manager" customModuleProvide
                                        <rect key="frame" x="0.0" y="99.5" width="314" height="40"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-Wf-P0a" userLabel="confirmPassword" customClass="PaddingTextUI" customModule="Cafe_Manager" cust
                                        <rect key="frame" x="0.0" y="149.5" width="314" height="40"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVy-sf-Ajg">
                                        <rect key="frame" x="134.5" y="58" width="45" height="30"/>
                                        <state key="normal" title="Login?"/>
                                        <connections>
                                            <action selector="secondaryBtnTaped:" destination="2Ba-MJ-xWQ" eventType="touchUpInside" id="yil-YS-LbK"/>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="gIO-69-Kcu">
                        <barButtonItem key="rightBarButtonItem" title="Sign Out" style="done" id="VLL-pq-bop">
                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                            <connections>
...
                        <viewLayoutGuide key="safeArea" id="XId-zZ-fem"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Store" image="foodTab" id="biZ-zl-bDu"/>
                    <connections>
                        <outlet property="topTabBar" destination="ZSU-jS-gVY" id="k0S-l6-luF"/>
...
                                <rect key="frame" x="157" y="438" width="100" height="30"/>
                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Allow Location">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
