...
        currentMode = (currentMode == .login) ? .register:.login
        confirmPassword.isHidden = (currentMode == .login)
        phonenumber.isHidden = (currentMode == .login)
        forgetPassword.isHidden = (currentMode == .register)
        
        //changing the text of the buttons accordingly based on if to show login or register
        primaryBtn.setTitle(currentMode == .login ? "Login" : "Register", for: .normal)
        secondaryBtn.setTitle(currentMode == .login ? "Register?" : "Login?", for: .normal)
        
        //there is a bug that when the hidden textfield is shown there outline around the texfield get
        //dispareared so i manually set the borderline again when the texfield get appeared again....
        for view in textFieldContainer.subviews{
            let textfield = view as? UITextField
            if !(textfield?.isHidden ?? true) {
...
