...
            message = "It seems you have not provided the location permission you have to open settings manually and provide us the location permission"
        }
        alertController = UIAlertController(title :"Location service is disabled",message:message, preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "Open Settings", style: .default, handler: { action in
            UIApplication.shared.open(URL(string:UIApplication.openSettingsURLString)!)
        }))
        alertController.addAction(UIAlertAction(title: "No need", style: .cancel, handler: { action in
            alertController.dismiss(animated: true, completion: nil)
        }))
        present(alertController,animated: true)
    }
    func navigateToMainScreen(){
        let nextScreen = storyboard!.instantiateViewController(identifier: auth.currentUser==nil ? "authScreen":"homeScreen")
...
